Fixing horizontal line on mobile - added more padding-top

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -104,7 +104,7 @@ body {
   display: inline-block;
   color: #757575;
   font-size: 1.15rem;
-  margin-top: -1rem; }
+  margin-top: -1.2rem; }
 
 .form__container {
   position: relative;
@@ -194,7 +194,7 @@ body {
       transform: translate(-50%, -50%); } }
   @media (max-width: 20em) {
     .home {
-      padding-top: 4rem; } }
+      padding-top: 6rem; } }
   .home__text-box {
     margin: 3rem 0rem 5rem 0rem;
     text-align: center;
