--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -77,7 +77,7 @@
             display: inline-block;
             color: $color-gray-medium;
             font-size: 1.15rem;
-            margin-top: -1rem;
+            margin-top: -1.2rem;
         }
     }
     
