--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -10,7 +10,7 @@
     }
     
     @include for-phones-small-only {
-        padding-top: 4rem;
+        padding-top: 6rem;
     }
     
     // Text on home screen
